welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value and is not a member of Boolean
  if (a<=19 and a>=13) {
            ^hasTeen:4: error: value and is not a member of Boolean
  } else if (b<=19 and b>=13) {
                   ^hasTeen:6: error: value and is not a member of Boolean
  } else if (c<=19 and c>=13) {
                   ^